man page translations: update list of translatable strings; update German translation

--- a/doc/man/po4a/po/de.po
+++ b/doc/man/po4a/po/de.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix\n"
 "Report-Msgid-Bugs-To: mo@bunkus.online\n"
-"POT-Creation-Date: 2022-10-01 19:51+0200\n"
-"PO-Revision-Date: 2022-10-01 19:59+0200\n"
+"POT-Creation-Date: 2022-10-15 17:02+0200\n"
+"PO-Revision-Date: 2022-10-15 17:02+0200\n"
 "Last-Translator: Moritz Bunkus <mo@bunkus.online>\n"
 "Language-Team: German <mo@bunkus.online>\n"
 "Language: de\n"
@@ -36,8 +36,8 @@ msgstr "71.1.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2022-08-14"
-msgstr "2022-08-14"
+msgid "2022-10-09"
+msgstr "2022-10-09"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -4292,8 +4292,8 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
-msgstr "&mkvmerge; wird jedes Zeilenpaar in ein &matroska;-<classname>ChapterAtom</classname> umwandeln. Es setzt keine <classname>ChapterTrackNumber</classname>, das heißt, dass alle Kapitel für alle Spuren in der Datei gelten."
+msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
+msgstr "&mkvmerge; wird jedes Zeilenpaar in ein &matroska;-<classname>ChapterAtom</classname> umwandeln. Es setzt keine <classname>ChapterTrackNumber</classname>, was bedeutet, dass alle Kapitel für alle Spuren in der Datei gelten."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2991
