--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.0.0\n"
-"POT-Creation-Date: 2022-10-01 19:51+0200\n"
+"POT-Creation-Date: 2022-10-15 17:02+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Overdrive80 <lukillas.ole@gmail.com>, 2022\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/es/)\n"
@@ -39,7 +39,7 @@ msgstr "71.1.0"
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
 #| msgid "2022-05-22"
-msgid "2022-08-14"
+msgid "2022-10-09"
 msgstr "2022-05-22"
 
 #. type: Content of the mkvmerge entity
@@ -4319,7 +4319,9 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+#, fuzzy
+#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
 msgstr "&mkvmerge; transformará cada par de líneas en un <classname>ChapterAtom</classname> de &matroska;. No se establece ningún <classname>ChapterTrackNumber</classname> lo que significa que todos los capítulos se aplican a todas las pistas del archivo. "
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
