--- a/doc/man/po4a/po/ja.po
+++ b/doc/man/po4a/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 5.0.1\n"
-"POT-Creation-Date: 2022-10-01 19:51+0200\n"
+"POT-Creation-Date: 2022-10-15 17:02+0200\n"
 "PO-Revision-Date: 2021-07-10 11:49+0200\n"
 "Last-Translator: YOSHIDUMI, Rentaro\n"
 "Language-Team: Japanese (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ja/)\n"
@@ -39,7 +39,7 @@ msgstr "34.0.0"
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
 #| msgid "2021-08-30"
-msgid "2022-08-14"
+msgid "2022-10-09"
 msgstr "2021-05-22"
 
 #. type: Content of the mkvmerge entity
@@ -4437,7 +4437,9 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+#, fuzzy
+#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
 msgstr "&mkvmerge;は各ペア、もしくは行を、一個の&matroska;<classname>ChapterAtom</classname>に変換します。<classname>ChapterTrackNumber</classname>は設定しないので、全てのトラックに楽章は適用されます。"
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
