--- a/doc/man/po4a/po/ko.po
+++ b/doc/man/po4a/po/ko.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2022-10-01 19:51+0200\n"
+"POT-Creation-Date: 2022-10-15 17:02+0200\n"
 "PO-Revision-Date: 2022-07-07 18:33+0200\n"
 "Last-Translator: 양성욱, 2022\n"
 "Language-Team: Korean (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ko/)\n"
@@ -40,7 +40,7 @@ msgstr "34.0.0"
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
 #| msgid "2022-03-13"
-msgid "2022-08-14"
+msgid "2022-10-09"
 msgstr "2022-03-13"
 
 #. type: Content of the mkvmerge entity
@@ -4305,7 +4305,9 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+#, fuzzy
+#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
 msgstr "&mkvmerge;는 모든 쌍 또는 줄을 하나의 &matroska; <classname>ChapterAtom</classname>으로 변환합니다. <classname>ChapterTrackNumber</classname>는 설정되지 않습니다. 이는 모든 챕터가 파일의 모든 트랙에 적용됨을 의미합니다."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
