--- a/doc/man/po4a/po/uk.po
+++ b/doc/man/po4a/po/uk.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 4.4.0\n"
-"POT-Creation-Date: 2022-10-01 19:51+0200\n"
+"POT-Creation-Date: 2022-10-15 17:02+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Vlad Anisimov <uniss@ua.fm>, 2020,2022\n"
 "Language-Team: Ukrainian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/uk/)\n"
@@ -36,7 +36,7 @@ msgstr "71.1.0"
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
 #| msgid "2022-03-13"
-msgid "2022-08-14"
+msgid "2022-10-09"
 msgstr "2022-03-13"
 
 #. type: Content of the mkvmerge entity
@@ -4301,7 +4301,9 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+#, fuzzy
+#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
 msgstr "&mkvmerge; перетворить кожну пару або рядки в один <classname>ChapterAtom</classname> &matroska;. Це не встановлює жодного <classname>ChapterTrackNumber</classname>, що означає, що всі глави застосовуються до всіх доріжок у файлі."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
