--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2022-10-01 19:51+0200\n"
+"POT-Creation-Date: 2022-10-15 17:02+0200\n"
 "PO-Revision-Date: 2022-10-08 15:14+0200\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2022\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
@@ -38,7 +38,9 @@ msgstr "71.1.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2022-08-14"
+#, fuzzy
+#| msgid "2022-08-14"
+msgid "2022-10-09"
 msgstr "14/08/2022"
 
 #. type: Content of the mkvmerge entity
@@ -4283,7 +4285,9 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+#, fuzzy
+#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
 msgstr "El &mkvmerge; transformarà cada parell de línies en un <classname>ChapterAtom</classname> del &matroska;. Si no s'estableix cap <classname>ChapterTrackNumber</classname>, voldrà dir que tots els capítols s'aplicaran a totes les pistes del fitxer."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
