--- a/doc/man/po4a/po/it.po
+++ b/doc/man/po4a/po/it.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2022-10-01 19:51+0200\n"
+"POT-Creation-Date: 2022-10-15 17:02+0200\n"
 "PO-Revision-Date: 2022-03-08 08:07+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/it/)\n"
@@ -40,7 +40,7 @@ msgstr "71.1.0"
 #: doc/man/mkvtoolnix-gui.xml:7
 #, fuzzy
 #| msgid "2022-02-06"
-msgid "2022-08-14"
+msgid "2022-10-09"
 msgstr "2022-02-06"
 
 #. type: Content of the mkvmerge entity
@@ -4315,7 +4315,7 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
+msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
 msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
