man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-10-15 17:02+0200\n"
-"PO-Revision-Date: 2022-10-08 15:14+0200\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2022\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
 "Language: ca\n"
@@ -38,10 +38,8 @@ msgstr "71.1.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-08-14"
 msgid "2022-10-09"
-msgstr "14/08/2022"
+msgstr "09/10/2022"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -4285,10 +4283,8 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-#, fuzzy
-#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
 msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
-msgstr "El &mkvmerge; transformarà cada parell de línies en un <classname>ChapterAtom</classname> del &matroska;. Si no s'estableix cap <classname>ChapterTrackNumber</classname>, voldrà dir que tots els capítols s'aplicaran a totes les pistes del fitxer."
+msgstr "El &mkvmerge; transformarà totes les parelles o línies en un i &matroska; <classname>ChapterAtom</classname>. No estableix cap <classname>ChapterTrackNumber</classname>, el qual significa que tots els capítols s'apliquen a totes les pistes en el fitxer."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2991
