--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -37,10 +37,8 @@ msgstr "71.1.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-05-22"
 msgid "2022-10-09"
-msgstr "2022-05-22"
+msgstr "2022-10-09"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -3009,17 +3007,13 @@ msgstr "Si mkvmerge detecta erróneamente que es un archivo <abbrev>AAC</abbrev>
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1637
-#, fuzzy
-#| msgid "<option>--timestamps</option> <parameter>TID:file-name</parameter>"
 msgid "<option>--audio-emphasis</option> <parameter>TID:n|symbolic-name</parameter>"
-msgstr "<option>--timestamps</option> <parameter>TID:nombre-archivo</parameter>"
+msgstr "<option>--audio-emphasis</option> <parameter>TID:n|nombre-simbólico</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1640
-#, fuzzy
-#| msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or one of these keywords:"
 msgid "Sets the emphasis for the audio track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> (certain values between <constant>0</constant> and <constant>16</constant>) or a symbolic name. All valid numbers &amp; symbolic names can be listed with the <link linkend=\"mkvmerge.description.list_audio_emphasis\"><option>--list-audio-emphasis</option> option</link>."
-msgstr "Establece el modo estereoscópico para la pista de video con el ID de pista <parameter>TID</parameter>. El modo puede ser un número <parameter>n</parameter> entre <constant>0</constant> y <constant>14</constant> o una de estas palabras clave: "
+msgstr "Establece el énfasis para la pista de audio con el ID de pista <parameter>TID</parameter>. El modo puede ser un número <parameter>n</parameter> (ciertos valores entre <constant>0</constant> y <constant>16</constant>) o un nombre simbólico. Todos los números válidos &amp; los nombres simbólicos pueden ser listados con la opción <link linkend=\"mkvmerge.description.list_audio_emphasis\"><option>--list-audio-emphasis</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1649
@@ -3425,17 +3419,13 @@ msgstr "<constant>0</constant>: progresivo; <constant>1</constant>: entrelazado 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2067
-#, fuzzy
-#| msgid "<option>--stereo-mode</option> <parameter>TID:n|keyword</parameter>"
 msgid "<option>--stereo-mode</option> <parameter>TID:n|symbolic-name</parameter>"
-msgstr "<option>--stereo-mode</option> <parameter>TID:n|palabraclave</parameter>"
+msgstr "<option>--stereo-mode</option> <parameter>TID:n|nombre-simbólico</parameter>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2070
-#, fuzzy
-#| msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or one of these keywords:"
 msgid "Sets the stereo mode for the video track with the track ID <parameter>TID</parameter>.  The mode can either be a number <parameter>n</parameter> between <constant>0</constant> and <constant>14</constant> or a symbolic name. All valid numbers &amp; names can be listed with the <link linkend=\"mkvmerge.description.list_stereo_modes\"><option>--list-stereo-modes</option> option</link>."
-msgstr "Establece el modo estereoscópico para la pista de video con el ID de pista <parameter>TID</parameter>. El modo puede ser un número <parameter>n</parameter> entre <constant>0</constant> y <constant>14</constant> o una de estas palabras clave: "
+msgstr "Establece el modo estéreo para la pista de vídeo con el ID de pista <parameter>TID</parameter>. El modo puede ser un número <parameter>n</parameter> entre <constant>0</constant> y <constant>14</constant> o un nombre simbólico. Todos los números válidos &amp; los nombres pueden ser listados con la opción <link linkend=\"mkvmerge.description.list_stereo_modes\"><option>--list-stereo-modes</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:2080
@@ -3509,10 +3499,8 @@ msgstr "El formato<literal>json</literal> genera una representación JSON legibl
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2150
-#, fuzzy
-#| msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
 msgid "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v17.json\"><literal>mkvmerge-identification-output-schema-v17.json</literal></ulink>"
-msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v16.json\"><literal>mkvmerge-identification-output-schema-v16.json</literal></ulink>"
+msgstr "<ulink url=\"https://mkvtoolnix.download/doc/mkvmerge-identification-output-schema-v17.json\"><literal>mkvmerge-identification-output-schema-v17.json</literal></ulink>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><orderedlist><listitem><para>
 #: doc/man/mkvmerge.xml:2154
@@ -3536,17 +3524,13 @@ msgstr "Si se conocen las pistas presentes en el archivo pero no son encontradas
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2178
-#, fuzzy
-#| msgid "<option>--list-languages</option>"
 msgid "<option>--list-audio-emphasis</option>"
-msgstr "<option>--list-languages</option>"
+msgstr "<option>--list-audio-emphasis</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2181
-#, fuzzy
-#| msgid "Lists all languages and their ISO 639-2 code which can be used with the <link linkend=\"mkvmerge.description.language\"><option>--language</option></link> option."
 msgid "Lists all valid numbers &amp; their corresponding symbolic names for the <link linkend=\"mkvmerge.description.audio_emphasis\"><option>--audio-emphasis</option></link> option."
-msgstr "Muestra una lista de idiomas y sus códigos ISO 639-2 que se pueden utilizar con la opción <link linkend=\"mkvmerge.description.language\"><option>--language</option></link>. "
+msgstr "Enumera todos los números válidos &amp; sus correspondientes nombres simbólicos para la opción <link linkend=\"mkvmerge.description.audio_emphasis\"><option>--audio-emphasis</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2188
@@ -3560,17 +3544,13 @@ msgstr "Muestra una lista de idiomas y sus códigos ISO 639-2 que se pueden util
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2198
-#, fuzzy
-#| msgid "<option>--gui-mode</option>"
 msgid "<option>--list-stereo-modes</option>"
-msgstr "<option>--gui-mode</option>"
+msgstr "<option>--list-stereo-modes</option>"
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2201
-#, fuzzy
-#| msgid "Lists all languages and their ISO 639-2 code which can be used with the <link linkend=\"mkvmerge.description.language\"><option>--language</option></link> option."
 msgid "Lists all valid numbers &amp; their corresponding symbolic names for the <link linkend=\"mkvmerge.description.stereo_mode\"><option>--stereo-mode</option></link> option."
-msgstr "Muestra una lista de idiomas y sus códigos ISO 639-2 que se pueden utilizar con la opción <link linkend=\"mkvmerge.description.language\"><option>--language</option></link>. "
+msgstr "Enumera todos los números válidos &amp; sus correspondientes nombres simbólicos para la opción <link linkend=\"mkvmerge.description.stereo_mode\"><option>--stereo-mode</option></link>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2208
@@ -4319,10 +4299,8 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-#, fuzzy
-#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
 msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
-msgstr "&mkvmerge; transformará cada par de líneas en un <classname>ChapterAtom</classname> de &matroska;. No se establece ningún <classname>ChapterTrackNumber</classname> lo que significa que todos los capítulos se aplican a todas las pistas del archivo. "
+msgstr "&mkvmerge; transformará cada par o líneas en un &matroska; <classname>ChapterAtom</classname>. No establece ningún <classname>ChapterTrackNumber</classname> lo que significa que todos los capítulos se aplican a todas las pistas del archivo."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2991
