man page translations: update French

--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -41,10 +41,8 @@ msgstr "71.1.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-08-14"
 msgid "2022-10-09"
-msgstr "14-08-2022"
+msgstr "2022-10-09"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -4291,10 +4289,8 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-#, fuzzy
-#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
 msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
-msgstr "&mkvmerge; transformera chaque paire ou lignes en un <classname>ChapterAtom</classname> &matroska;. Il ne définit aucun <classname>ChapterTrackNumber</classname>, ce qui signifie que les chapitres s'appliquent tous à toutes les pistes du fichier."
+msgstr "&mkvmerge; va transformer chaque paire ou lignes en un <classname>ChapterAtom</classname> &matroska;. Il ne définit aucun <classname>ChapterTrackNumber</classname>, ce qui signifie que tous les chapitres s'appliquent tous à toutes les pistes du fichier."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2991
