man page translations: update Chinese Simplified (China)

--- a/doc/man/po4a/po/zh_CN.po
+++ b/doc/man/po4a/po/zh_CN.po
@@ -36,10 +36,8 @@ msgstr "71.1.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-08-14"
 msgid "2022-10-09"
-msgstr "2022-08-14"
+msgstr "2022-10-09"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -4283,10 +4281,8 @@ msgstr ""
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2986
-#, fuzzy
-#| msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that the chapters all apply to all tracks in the file."
 msgid "&mkvmerge; will transform every pair or lines into one &matroska; <classname>ChapterAtom</classname>. It does not set any <classname>ChapterTrackNumber</classname> which means that all chapters apply to all tracks in the file."
-msgstr "&mkvmerge; 将转换每两行为一个 &matroska; <classname>章节单位（ChapterAtom）</classname>。这种情况不会设定任何 <classname>章节轨道号（ChapterTrackNumber）</classname>，也就是说所有章节被应用到文件的所有轨道。"
+msgstr "&mkvmerge; 会将每一组/行内容转换为一个 &matroska; <classname>ChapterAtom</classname> 元素，但不含设置 <classname>ChapterTrackNumber</classname> ｢章节轨道编号｣ 元素，因此所有章节都将应用到文件中的所有轨道。"
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvmerge.xml:2991
