program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -14154,7 +14154,7 @@ msgstr "Scala data/ora"
 #: src/merge/cluster_helper.cpp:230
 #, no-c-format
 msgid "Timestamp used in split decision: {0}\n"
-msgstr ""
+msgstr "Data/ora usata nella decisione divisione: {0}\n"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2185
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2208
