program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -13906,7 +13906,7 @@ msgstr "Масштабирование меток времени"
 #: src/merge/cluster_helper.cpp:230
 #, no-c-format
 msgid "Timestamp used in split decision: {0}\n"
-msgstr ""
+msgstr "Метка времени, используемая в спорной ситуации: {0}\n"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2185
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2208
