program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -8972,7 +8972,7 @@ msgstr "Fue requerida la modificación de propiedades en la sección '{0}', pero
 #: src/mkvtoolnix-gui/forms/info/tab.h:155
 #, no-c-format
 msgid "Modified:"
-msgstr ""
+msgstr "Modificado:"
 
 #: src/common/kax_element_names.cpp:271
 #, no-c-format
@@ -14210,7 +14210,7 @@ msgstr "Escala de marca de tiempos"
 #: src/merge/cluster_helper.cpp:230
 #, no-c-format
 msgid "Timestamp used in split decision: {0}\n"
-msgstr ""
+msgstr "Marca de tiempo utilizada en la decisión de división: {0}\n"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2185
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2208
