program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -8906,7 +8906,7 @@ msgstr "È stata richiesta la modifica delle proprietà nella sezione '{0}', ma 
 #: src/mkvtoolnix-gui/forms/info/tab.h:155
 #, no-c-format
 msgid "Modified:"
-msgstr ""
+msgstr "Modificato:"
 
 #: src/common/kax_element_names.cpp:271
 #, no-c-format
