program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix 8.9.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-11-02 19:48+0100\n"
-"PO-Revision-Date: 2022-10-08 15:15+0200\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2022\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/ca/)\n"
@@ -8940,7 +8940,7 @@ msgstr "S'ha requerit la modificació de les propietats a la secció «{0}», pe
 #: src/mkvtoolnix-gui/forms/info/tab.h:155
 #, no-c-format
 msgid "Modified:"
-msgstr ""
+msgstr "Modificat:"
 
 #: src/common/kax_element_names.cpp:271
 #, no-c-format
@@ -14165,7 +14165,7 @@ msgstr "Escala del codi de temps"
 #: src/merge/cluster_helper.cpp:230
 #, no-c-format
 msgid "Timestamp used in split decision: {0}\n"
-msgstr ""
+msgstr "Codi de temps emprat en la decisió de dividir: {0}\n"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2185
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2208
